# paciencia

./: .gitignore  CLAUDE.md  CONTEUDO_CARTAS.md  CONTRIBUTING.md  LICENSE  README.md  check_cards.js  index.html  package-lock.json  package.json  planning.md
.github/workflows/: release-desktop.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps-script/: Code.gs
flatpak/: br.dev.hericmr.paciencia-ss.desktop  br.dev.hericmr.paciencia-ss.metainfo.xml  br.dev.hericmr.paciencia-ss.yml  io.github.hericmr.paciencia-ss.desktop  io.github.hericmr.paciencia-ss.metainfo.xml  io.github.hericmr.paciencia-ss.yml  io.github.hericmr.paciencia.desktop  io.github.hericmr.paciencia.metainfo.xml  io.github.hericmr.paciencia.yml
scripts/: author-photos-manifest.json  download-author-photos.mjs  prepare-desktop-dist.mjs
specs/001-jogo-paciencia-educativo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-jogo-categorias-associacoes/: CONTEUDO_CARTAS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-editor-de-baralho/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/: main.js
src-tauri/: .gitignore  Cargo.toml  cargo-sources.json  paciencia-ss.desktop.hbs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/audio/: sound-manager.js
src/data/: author-photos.json  cards.servico-social-estreia.json  categories.json  levels.json  loader.js  (+1 more)
(+36 files in other folders)
