[package]
name = "paciencia-ss"
version = "0.1.1"
description = "Jogo de paciência educativo sobre Serviço Social Brasileiro"
authors = ["hericmr"]
license = "MIT"
repository = "https://github.com/hericmr/paciencia"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Ativado por padrão (embute os assets de produção). `tauri dev` desativa
# via `cargo run --no-default-features` para carregar do devUrl com hot reload.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
